--- a/src/react-client/src/Components/Movie/MovieItem.css
+++ b/src/react-client/src/Components/Movie/MovieItem.css
@@ -1,31 +1,21 @@
-/* Container holding the movie items */
-.movies-row {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1.5rem; /* space between items */
-  justify-content: center;
-  padding: 0 3rem; /* left and right padding for a Netflix-like center layout */
-  margin: 0 auto;
-  max-width: 1600px; /* optional max width */
-}
-
 .movie-item {
-  width: 240px;
-  flex-shrink: 0;
+  flex: 0 0 auto;
+
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   background-color: transparent;
-  margin-bottom: 3rem;
   border-radius: 10px;
   box-sizing: border-box;
+  margin-bottom: 4rem;
 }
-/* impotent here you should adjust the picture height and width to fit want we will want */
+
 .movie-thumbnail {
-  width: 240px;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 4px;
+  width: clamp(100px, 25vw, 320px);
+
+  aspect-ratio: 16 / 9;
+
+  border-radius: 10px;
   margin-bottom: 0.5rem;
   cursor: pointer;
   border: 4px solid transparent;
