--- a/src/react-client/src/Components/Movie/MovieList.css
+++ b/src/react-client/src/Components/Movie/MovieList.css
@@ -1,7 +1,18 @@
+.movie-list-container {
+  margin: 10px 40px;
+}
+
 .more-to-explore {
-  color: lightgray; /* Set text color to light grey */
-  text-align: center; /* Center the text */
-  margin-top: 10px; /* Adjust top margin to position it higher */
-  margin-bottom: 20px; /* Space below the heading */
-  font-size: 1.25rem; /* Increase font size for better visibility */
+  color: lightgray;
+  text-align: left;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.search-page-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.1rem;
 }
