--- a/src/android-client/app/src/main/res/values/themes.xml
+++ b/src/android-client/app/src/main/res/values/themes.xml
@@ -6,4 +6,13 @@
     </style>
 
     <style name="Theme.Androidclient" parent="Base.Theme.Androidclient" />
+
+    <style name="Theme.Androidclient.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Androidclient.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Androidclient.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
