--- a/src/android-client/app/src/main/res/layout/activity_sign_up.xml
+++ b/src/android-client/app/src/main/res/layout/activity_sign_up.xml
@@ -41,6 +41,7 @@
             android:textColor="@color/white"
             android:background="@android:color/transparent"
             android:textSize="11sp"
+            android:inputType="text"
             android:layout_marginBottom="10dp" />
 
         <View
@@ -75,6 +76,7 @@
             android:textColor="@color/white"
             android:background="@android:color/transparent"
             android:textSize="11sp"
+            android:inputType="text"
             android:layout_marginBottom="10dp" />
         <View
             android:layout_width="match_parent"
