--- a/src/android-client/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/src/android-client/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -4,27 +4,34 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    <!-- Path data for "NF" -->
     <path
+        android:pathData="M54.30 37.04L54.30 71.30L48.53 71.30L30.79 43.23L30.60 43.23Q30.67 44.49 30.77 46.00Q30.86 47.52 30.92 49.17Q30.98 50.82 31 52.51L31 52.51L31 71.30L26.59 71.30L26.59 37.04L32.31 37.04L49.98 64.98L50.15 64.98Q50.10 63.95 50.03 62.42Q49.96 60.90 49.90 59.20Q49.84 57.50 49.84 55.98L49.84 55.98L49.84 37.04L54.30 37.04ZM68.24 56.89L68.24 71.30L63.46 71.30L63.46 37.04L82.68 37.04L82.68 41.16L68.24 41.16L68.24 52.79L81.79 52.79L81.79 56.89L68.24 56.89Z"
         android:fillColor="#FFFFFF"
         android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
         android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:strokeColor="#000000"/>
+<!--    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">-->
+<!--        <aapt:attr name="android:fillColor">-->
+<!--            <gradient-->
+<!--                android:endX="85.84757"-->
+<!--                android:endY="92.4963"-->
+<!--                android:startX="42.9492"-->
+<!--                android:startY="49.59793"-->
+<!--                android:type="linear">-->
+<!--                <item-->
+<!--                    android:color="#44000000"-->
+<!--                    android:offset="0.0" />-->
+<!--                <item-->
+<!--                    android:color="#00000000"-->
+<!--                    android:offset="1.0" />-->
+<!--            </gradient>-->
+<!--        </aapt:attr>-->
+<!--    </path>-->
+<!--    <path-->
+<!--        android:fillColor="#FFFFFF"-->
+<!--        android:fillType="nonZero"-->
+<!--        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"-->
+<!--        android:strokeWidth="1"-->
+<!--        android:strokeColor="#00000000" />-->
 </vector>
