--- a/src/android-client/app/src/main/res/layout/fragment_home.xml
+++ b/src/android-client/app/src/main/res/layout/fragment_home.xml
@@ -6,18 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".activities.home.HomeFragment">
 
-    <TextView
-        android:id="@+id/text_home"
+    <!-- ExoPlayer View for Randomized Movie -->
+    <com.google.android.exoplayer2.ui.PlayerView
+        android:id="@+id/exoPlayerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="250dp"
+        android:layout_marginBottom="8dp"
+        app:use_controller="true"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/menu_home"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- RecyclerView for Categories -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewCategories"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/exoPlayerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_category" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
