--- a/src/android-client/app/src/main/res/layout/fragment_home.xml
+++ b/src/android-client/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".activities.home.HomeFragment">
 
+    <!-- User Profile Section -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/userProfileSection"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/userProfileImage"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_home"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/userNameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textSize="16sp"
+            app:layout_constraintStart_toEndOf="@id/userProfileImage"
+            app:layout_constraintTop_toTopOf="@id/userProfileImage"
+            app:layout_constraintBottom_toBottomOf="@id/userProfileImage"
+            tools:text="User Name" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <!-- ExoPlayer View for Randomized Movie -->
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/exoPlayerView"
@@ -13,7 +43,7 @@
         android:layout_height="250dp"
         android:layout_marginBottom="8dp"
         app:use_controller="true"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/userProfileSection"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
